# mii-http

./: Cargo.toml  README.md  llm.md  specs.md
.github/workflows/: release.yml  vscode-extension.yml
crates/mii-http-client/: Cargo.toml  README.md
crates/mii-http-client-macros/: Cargo.toml
crates/mii-http-client-macros/src/: lib.rs
crates/mii-http-client/src/: lib.rs
crates/mii-http-client/tests/: generated_client.rs  upload.http
editors/vscode/mii-http/: .vscodeignore  LICENSE  README.md  language-configuration.json  package.json  tsconfig.json
editors/vscode/mii-http/src/: extension.ts
editors/vscode/mii-http/syntaxes/: mii-http.tmLanguage.json
examples/: exec_dbg.rs  sample.http
src/: check.rs  diag.rs  exec.rs  lib.rs  main.rs  parser.rs  server.rs  spec.rs  value.rs
src/parse/: exec.rs  mod.rs  spec.rs
tests/: check_tests.rs  cli_tests.rs  diag_tests.rs  exec_tests.rs  parser_tests.rs  value_tests.rs
