[package]
name = "mii-http"
version = "0.3.0"
edition = "2024"
description = "Turn a .http specs file into a real HTTP server, backed by the shell commands you already have."
license = "BSD-3-Clause"
repository = "https://github.com/mii-nipah/mii-http"
readme = "README.md"

[dependencies]
ariadne = "0.6"
chumsky = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "signal", "time", "sync", "fs"] }
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "matched-path", "original-uri", "query"] }
hyper = { version = "1", features = ["server", "http1"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
form_urlencoded = "1"
http = "1"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
