[package]
name = "mii-http-client"
version = "0.1.0"
edition = "2024"
description = "Generated Rust clients for mii-http specs."
license = "BSD-3-Clause"
repository = "https://github.com/mii-nipah/mii-http"

[dependencies]
bytes = "1"
mii-http-client-macros = { path = "../mii-http-client-macros" }
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
